package fesql.common;
option cc_generic_services = false;
option java_package = "com._4paradigm.fesql.common";
option java_outer_classname = "Common";

enum StatusCode {
    kOk = 0;
    kRunning = 1;
    kTypeError = 8;
    kFileIOError = 9;
    kUnSupport = 10;
    kBadRequest = 11;
    kNameExists = 12;
    kTableExists = 13;
    kNoDatabase = 14;
    kTableNotFound = 15;
    kTablePutFailed = 16;
    kNullPointer = 17;
    kProcedureNotFound = 18;
    kConnError = 20;
    kRpcError = 21;
    kTimeoutError = 22;
    kResponseError = 23;
    kSQLError = 30;
    kPlanError = 31;
    kCallMethodError = 32;
    kColumnNotFound = 33;
    kIndexNotFound=34;
    kFunError = 40;
    kCodegenError = 50;
    kOpGenError = 60;
    kJitError = 70;
    kSchemaCodecError = 71;

}

message Status {
    optional StatusCode code = 1;
    optional string msg = 2;
}
